objects/Forecastdisplay__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CCP__c</fullName>
        <label>CCP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <label>Software</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>software_2__c</fullName>
        <label>software_2</label>
        <type>TextArea</type>
    </fields>
    <label>Forecastdisplay</label>
</CustomObject>